# mtt

./: .dockerignore  .gitattributes  .gitconfig  .gitignore  Dockerfile  README.md  guild.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
notebooks/: baysian.ipynb  data.ipynb  egnn.ipynb  evaluate.ipynb  evaluate_image.ipynb  evaluate_knn.ipynb  evaluate_sparse.ipynb  kernel_ed.ipynb  mid.ipynb  mid_summary.ipynb  mtt_summary.ipynb  notebook.ipynb  optuna.ipynb  plots.ipynb  poster_summary.ipynb  runtime.ipynb  sampling.ipynb  study_results.ipynb  summary.ipynb  video.ipynb
scripts/: compare.py  evaluate.ipynb  generate_data.py  main.py  notebook.ipynb  parse_lmco.py  smc_phd.ipynb  study.py  test_generalization.py  train.py  training_data.py  visualize.py
src/mtt/: cnn_filter.py  data.py  gmphd.py  lloyd.py  models.py  peaks.py  phd.py  sensor.py  simulator.py  smc_phd.py  target.py  types.py  utils.py  visualize.py
src/mtt/data/: image.py  sim.py  sparse.py  tensor.py  utils.py
src/mtt/models/: __init__.py  convolutional.py  egnn.py  kernel.py  sparse.py  transformer.py  utils.py
test/: test_cnn_filter.py  test_transformer.py
