[tool.poetry]
name = "mtt"
version = "0.1.0"
description = "Multi target tracking."
authors = ["Damian Owerko <damowerko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "^1.22.1"
pandas = "^1.5.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scikit-learn = "^1.2.0"
scikit-image = "^0.20.0"
stonesoup = "^0.1b11"
wandb = "^0.13.10"
optuna = "^3.2.0"
optuna-dashboard = "^0.8.1"
psycopg2-binary = "^2.9.5"
scipy = "^1.11.1"
torch = "^2.0.1"
torchdata = "^0.6.1"
pytorch-lightning = "1.8.*"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter = "^1.0.0"
ipympl = "^0.8.7"
pytest = "^7.2.0"
plotly = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"