[tool.poetry]
name = "mtt"
version = "0.1.0"
description = "Multi target tracking."
authors = ["Damian Owerko <damowerko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.22.1"
pandas = "^2.2.0"
matplotlib = "^3.6.2"
seaborn = "^0.13.0"
scikit-learn = "^1.2.0"
scikit-image = "^0.20.0"
wandb = "^0.16.2"
optuna = "^3.2.0"
optuna-dashboard = "^0.8.1"
psycopg2-binary = "^2.9.5"
scipy = "^1.11.1"
torchcps = {git = "https://github.com/Damowerko/torchcps"}
torchdata = "^0.7.1"
dask = {extras = ["complete", "distributed", "dataframe"], version = "^2023.11.0"}
fastavro = "^1.9.0"
fastparquet = "^2023.10.1"
optuna-integration = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter = "^1.0.0"
ipympl = "^0.8.7"
pytest = "^7.2.0"
plotly = "^5.13.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cu121.html"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"